--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,8 +40,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.struts.classpath}:\
-    ${file.reference.postgresql-9.1-903.jdbc4.jar}:\
-    ${file.reference.postgresql-9.1-903.jdbc4.jar-1}
+    ${file.reference.postgresql-9.1-903.jdbc4.jar-1}:\
+    ${libs.Postgres.classpath}:\
+    ${file.reference.postgresql-9.1-903.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
